examples/test/testpolicy12510.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12510
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key25: value20
      key38: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value3
          key4: value29
      podSelector:
        matchLabels:
          key26: value12
